--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MVVMApplication"
+        android:name=".app.MVVMApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.activity.SearchUserActivity"
+            android:name=".features.searchuser.SearchUserActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.activity.UserDetailsActivity"
+            android:name=".features.userdetails.UserDetailsActivity"
             android:label="@string/title_activity_user_details"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
