--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
   compileSdkVersion 23
@@ -16,6 +17,7 @@ android {
     versionName "1.0"
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
+
   buildTypes {
     release {
       minifyEnabled false
@@ -32,9 +34,11 @@ android {
       java.srcDir sharedTestDir
     }
   }
-}
 
-apply plugin: 'com.neenbedankt.android-apt'
+  testOptions {
+    unitTests.returnDefaultValues = true
+  }
+}
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -66,7 +70,7 @@ dependencies {
 
   testCompile 'org.mockito:mockito-core:1.10.19'
   testCompile 'junit:junit:4.12'
-
+  testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 
   androidTestCompile 'com.github.fabioCollini:DaggerMock:0.5'
   androidTestCompile 'junit:junit:4.12'
@@ -83,4 +87,6 @@ dependencies {
     exclude group: 'com.android.support', module: 'support-v4'
     exclude module: 'recyclerview-v7'
   }
+  compile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+  testCompile 'org.robolectric:robolectric:3.0'
 }
